--- a/style.css
+++ b/style.css
@@ -16,3 +16,12 @@ h2 {
   width: 100%;
   height: 100%;
 }
+
+.panel {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 1000;
+  padding: 5px 10px;
+  background-color: rgba(255, 255, 255, 0.8)
+}
